--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -1,27 +1,45 @@
 body {
   background: #eee;
   font-family: sans-serif;
+  max-width: 600px;
+  margin: 0 auto;
 }
 
 .card {
   width: 400px;
   background: #fff;
-  margin: 16px auto;
+  font-size: 16px;
+  margin: 8px auto;
+  padding: 8px;
 }
 
 .title {
   background: #e3f4ff;
+  margin: 8px;
+  padding: 8px;
+  font-size: 16px;
 }
 
 .content {
   background: #e3f4ff;
+  margin: 8px;
+  padding-left: 8px;
+  padding-top: 16px;
+  padding-right: 8px;
+  padding-bottom: 16px;
 }
 
 .button-container {
   background: #e3f4ff;
+  margin: 8px;
+  text-align: center;
+  padding: 8px;
 }
 
 button {
   background: white;
   border: 1px solid #eee;
+  display: block;
+  margin: auto;
+  padding: 8px 24px;
 }
